--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "serve": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "devDependencies": {
     "@lhci/cli": "^0.15.1",
     "http-server": "^14.1.1",
     "serve-handler": "^6.1.5"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
