--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
-  "name": "coffee-shop-seed",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "next-scaffold",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "serve": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
+  },
+  "dependencies": {
+    "next": "16.0.7",
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@lhci/cli": "^0.15.1",
-    "http-server": "^14.1.1",
-    "serve-handler": "^6.1.5"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/ui": "^4.0.15",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.7",
+    "jsdom": "^27.2.0",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "vitest": "^4.0.15"
+  }
 }
