--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^6.19.1",
+    "dotenv": "^17.2.3",
+    "ioredis": "^5.8.2",
     "next": "16.0.7",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -20,6 +25,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.1",
@@ -27,8 +33,11 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "jsdom": "^27.2.0",
+    "prisma": "^6.19.1",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vitest": "^4.0.15"
   }
 }
