--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^6.19.1",
+    "@stripe/stripe-js": "^8.5.3",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "next": "16.0.7",
     "pg": "^8.16.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
