--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -9,6 +9,19 @@ on:
 jobs:
   lighthouse:
     runs-on: ubuntu-latest
+    
+    # ADDED: This starts a Redis container in the background
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -17,7 +30,6 @@ jobs:
       
       - run: npm ci
       
-      # FIX 1: Generate the Prisma Client before starting the server
       - name: Generate Prisma Client
         run: npx prisma generate
         
@@ -28,10 +40,12 @@ jobs:
           npm run dev &
           npx wait-on http://localhost:3000 --timeout 60000
         env:
-          # FIX 2: Give Prisma a dummy URL so it doesn't crash on startup
           DATABASE_URL: "postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+          # ADDED: Tell your app where to find the Redis service
+          REDIS_URL: "redis://localhost:6379"
           
       - run: lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
           DATABASE_URL: "postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+          REDIS_URL: "redis://localhost:6379"
